# WattsFun

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
resources/: resources.qrc
resources/routes/: sample_route.gpx
src/: antmanager.cpp  antmanager.h  blemanager.cpp  blemanager.h  dashboardwidget.cpp  dashboardwidget.h  deviceconfig.cpp  deviceconfig.h  deviceselectiondialog.cpp  deviceselectiondialog.h  deviceselectiondialog.ui  iprotocolmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stravauploader.cpp  stravauploader.h  tcxexporter.cpp  tcxexporter.h  trainerdata.cpp  trainerdata.h  traininglibrary.cpp  traininglibrary.h  workouteditordialog.cpp  workouteditordialog.h
